[package]
name = "amm-sdk-netsblox-wasm"
version = "0.1.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7" }
amm-sdk-netsblox = { git = "https://github.com/dragazo/amm-sdk-netsblox" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
